# Data-IESB

./: .gitignore  GOOGLE-OAUTH-FIX-GUIDE.md  PROJECT_AUDIT.md  README.md  buildspec.yml  cleanup-branches.sh  test-prod-deployment.sh
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-dev.yml  deploy-prod.yml
backend/: docker-compose.yaml  pyproject.toml  schema.sql
backend/agent/: settings.py
src/: .env.template  Dockerfile  GMAIL-LOGIN-INTEGRATION.md  Procfile  README-QBusiness-Chatbot.md  admin.html  apprunner.yaml  buildspec-test.html  cadastrar.html  callback.html  chatbot_backend.py  contato.html  debug-team-api.html  equipe.html  google-oauth-diagnostic.html  iam-policy.json  index.html  lambda_team_api.py  login-simple-test.html  login.html  miv.html  parceiros.html  quem-somos.html  reports.json  requirements.txt  style.css  team_api.py  test-api-connection.html  test-cognito-config.html  test-deployment.html  test-gmail-login.html  test-linkedin-dev.html  test-qbusiness-chatbot.py
src/helm-chart/: Chart.yaml
src/js/: navigation.js  qbusiness-chatbot.js  team-data-api.js  team-data.js
src/style/: home.css  team-dynamic.css
